# dlogcover

./: .clang-format  .gitignore  CMakeLists.txt  Cursor&UserRules.md  README.md  build.sh  dlogcover.json  dlogcover_bug_fix_summary.md  dlogcover_report.txt  dlogcover_report.txt-bak  logrules.md  out.txt  pipeline_perf_test.cpp  test_config.json  testrules.md
.cursor/rules/: 00-readme.mdc  01-project-overview.mdc  02-development-environment.mdc  02-features.mdc  03-architecture.mdc  03-development-workflow.mdc  04-dev-guidelines.mdc  05-project-structure.mdc  06-code-style-guide.mdc  07-framework-usage.mdc  08-testing-and-qa.mdc  09-development-workflow.mdc  10-llvm-clang-usage.mdc  11-log-analysis.mdc  12-cpp-guidelines.mdc  13-dtk-qt-usage.mdc  14-product-management.mdc  15-performance-optimization.mdc  16-configuration-management.mdc  17-build-system.mdc  17-cli-interface.mdc  18-log-optimization.mdc  avoid_hardcoding.md  interactive-feedback.mdc  memery-bank.mdc  mode-rules.mdc  riper.mdc  riper5-chinese.mdc  riper5_rules.mdc
.marscode/: deviceInfo.json
.specstory/history/: 2025-05-13_14-15-cursor-rules-generation-discussion.md  2025-05-13_14-15-cursor-rules-generation.md  2025-05-13_14-54-cursor-rules-generation-discussion.md  2025-05-14_00-57-cursor-rules-generation.md  2025-05-14_11-43-enforcing-english-in-commit-messages.md  2025-05-15_00-59-项目工程生成与需求标记.md  2025-05-15_01-27-cursor-rules-generation.md  2025-05-15_04-02-继续上一次的任务.md  2025-05-15_08-27-继续模块开发进度.md  2025-05-16_05-04-项目实现情况检查与需求文档更新.md  2025-05-16_07-07-update-cursor-rules-with-user-guidelines.md  2025-05-16_09-02-修复单元测试错误讨论.md  2025-05-19_02-35-代码审查与需求完成度审查.md  2025-05-19_03-37-ast-analyzer-code-review-and-improvement-plan.md  2025-05-19_06-27-单元测试用例更新与覆盖率保障.md  2025-05-19_09-39-修复-@error-handling-test-cpp-单元测试.md  2025-05-20_00-51-程序扫描故障分析.md  2025-05-21_01-56-程序异常根因分析与修复方案.md  2025-05-21_12-45-分析dlogcover覆盖率为0的原因.md  2025-05-26_15-17-重新生成缺失的-h头文件.md  2025-05-26_18-01-修复编译警告与链接错误.md  2025-05-27_00-48-更新仓库配置和文档.md  2025-05-27_13-33-untitled.md  2025-05-28_05-34-项目规则与源码覆盖率分析.md  2025-05-28_07-50-更新readme-md文件内容.md  2025-05-28_09-22-命令行帮助信息不显示问题.md  2025-05-28_09-57-sent-to-chat.md  2025-05-29_01-04-discussion-about-chinese-channel-or-user.md  2025-06-03_13-02-修复-gitignore配置问题.md  2025-06-03_14-06-分析生成ast失败的原因.md  2025-06-05_05-43-识别cmakelist配置并生成ast.md  2025-06-05_06-47-加载riper-5中文版规则.md  2025-06-05_11-45-分析日志模块输出问题.md  2025-06-05_13-48-logmanager-似乎是多余的.md  2025-06-05_15-05-命令行参数解析中的日志系统问题.md  2025-06-07_16-02-更新readme中的依赖信息.md  2025-06-07_17-55-分析-deepin-draw-报告中的未识别问题.md  2025-06-08_13-45-解决application-cpp函数未识别问题.md  2025-06-08_16-46-修复完善compile-commands-json逻辑.md  2025-06-08_16-54-深入分析compile-commands-json实现逻辑.md  (+47 more)
.tasks/: bug_analysis_20250611.md  coverage_improvement_plan.md  go_language_support_research_20241220.md
cmake/: CheckCoverage.cmake
debian/: changelog  control  copyright  debhelper-build-stamp  dlogcover.substvars  install  rules
debian/.debhelper/dlogcover/: dbgsym-build-ids
demo/dde-grand-search-6.0.15/: CMakeLists.txt  dlogcover.json  dlogcover_report.txt
demo/dde-grand-search-6.0.15/debian/: dde-grand-search.substvars  files
demo/dde-grand-search-6.0.15/minimal_test/: CMakeLists.txt  dlogcover.json  dlogcover_report.txt  main.cpp
dlogcover_rs/: Cargo.toml  dlogcover.json
dlogcover_rs/src/: main.rs
dlogcover_rs/src/cli/: command_line_parser.rs  mod.rs
dlogcover_rs/src/config/: config_manager.rs  mod.rs
dlogcover_rs/src/core/: mod.rs
dlogcover_rs/src/core/ast_analyzer/: ast_analyzer.rs  mod.rs
dlogcover_rs/src/core/coverage/: coverage_calculator.rs  mod.rs
dlogcover_rs/src/core/log_identifier/: log_identifier.rs  mod.rs
dlogcover_rs/src/reporter/: json_reporter.rs  mod.rs  reporter_strategy.rs  text_reporter.rs
dlogcover_rs/src/source_manager/: mod.rs  source_manager.rs
dlogcover_rs/src/utils/: file_utils.rs  log_utils.rs  mod.rs  string_utils.rs
docs/: PRD.md  产品需求文档.md  架构设计文档.md  概要设计文档.md  详细设计文档.md  配置指南.md
examples/: CMakeLists.txt  dlogcover.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: main.cpp
src/cli/: command_line_parser.cpp  config_validator.cpp  options.cpp
src/common/: log_types.cpp
src/config/: compile_commands_manager.cpp  config_manager.cpp
src/reporter/: json_reporter_strategy.cpp  reporter.cpp  reporter_factory.cpp  text_reporter_strategy.cpp
src/source_manager/: source_manager.cpp
src/utils/: cmake_parser.cpp  file_utils.cpp  log_utils.cpp  path_normalizer.cpp  string_utils.cpp  thread_pool.cpp  work_stealing_thread_pool.cpp
test_coverage/: CMakeLists.txt
test_project/: dlogcover_config.json  dlogcover_report.txt  test.cpp  test.go
tests/: CMakeLists.txt  ast_cache_test.cpp  concurrent_safety_test.cpp  deadlock_detection_test.cpp  thread_pool_test.cpp
tests/common/: test_utils.cpp  test_utils.h
tests/integration/: CMakeLists.txt  basic_integration_test.cpp  config_workflow_test.cpp  coverage_workflow_test.cpp  error_handling_test.cpp  log_analysis_test.cpp  pipeline_test.cpp
tests/unit/: CMakeLists.txt  ast_analyzer_linkage_spec_test.cpp  ast_analyzer_parallel_test.cpp  ast_analyzer_test.cpp  ast_cache_time_test.cpp  cmake_parser_test.cpp  command_line_parser_extended_test.cpp  command_line_parser_test.cpp  compile_commands_manager_test.cpp  config_manager_test.cpp  config_validator_extended_test.cpp  coverage_calculator_test.cpp  cpp_analyzer_adapter_test.cpp  file_ownership_validator_test.cpp  file_utils_test.cpp  go_analyzer_test.cpp  language_detector_test.cpp  log_identifier_edge_cases_test.cpp  log_identifier_simple_test.cpp  log_identifier_test.cpp  log_types_test.cpp  multi_language_analyzer_test.cpp  options_extended_test.cpp  path_normalizer_test.cpp  reporter_test.cpp  result_test.cpp  source_manager_test.cpp  string_utils_extended_test.cpp
tests/unit/cli/: options_test.cpp
tools/: check-license-consistency.sh
tools/go-analyzer/: go.mod  main.go  test_request.json  test_simple.go
(+373 files in other folders)
