[package]
name = "dlogcover_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang-sys = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1"
log = "0.4"
env_logger = "0.9"
walkdir = "2"
rand = "0.8" 
lazy_static = "1.4.0"
